Display Scaling Fixed on Mobile and 4K and Half Ratios of full widths

--- a/style.css
+++ b/style.css
@@ -54,7 +54,25 @@ body{
     border:  1px solid rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0px 0px 70px 10px rgb(14, 14, 15);
+
+    
+    
 }
+
+
+/*HTML COLOR PICKER ELEMENT*/
+#color-picker{
+    min-height: 30px;
+    max-height: 60px;
+
+    min-width: 30px;
+    max-width: 60px;
+}
+
+
+
+
+
 
 
 /*BUTTONS*/
@@ -63,47 +81,147 @@ body{
 /*ALL BUTTONS*/
 
 .button{
-    background-image: linear-gradient(to right, #003973 0%, #E5E5BE  51%, #003973  100%);
 
 
     margin: 5px 2px;
     padding: 15px 35px;
 
-
+    font-weight: bolder;
     text-align: center;
     text-transform: uppercase;
 
     transition: 0.5s;
 
-    background-image: linear-gradient(to right, #003973 0%, #E5E5BE  51%, #003973  100%);
-    background-size: 200% auto;
+    background-image: linear-gradient(to right, #000000 71%, #ffffff  100%, #000000  100%);
+    background-size: 800% auto;
 
     color: white;            
 
-    box-shadow: 0 0 20px #eee;
+    box-shadow: 0 0 10px #eee;
 
-    border-radius: 10px;
+    border-radius: 15px;
 
 }
 
 .button:hover{
     background-position: right center; /* change the direction of the change here */
     color: #fff;
+    box-shadow: 0 0 20px rgb(255, 255, 255);
     text-decoration: none;
 }
 
 
 
-/*ERASE ALL BUTTON*/
-#erase-all-button{
+/*RANDOM BUTTON'S RAINBOW HOVER EFFECT*/
+/*Taken from - [EXPLANATION for animation] [DONT UNDERSTAND] rainbow Gradient hover button CANNOT FADE IN TRANSITION.txt*/
+/*Inside Github private reprository- "Old-HDD-CSS-Backups"*/
 
-    position: relative;
+#random-button{
+    background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+    background-size: 400%;
+    border-radius: 15px;
+    z-index: 1;
+}
+
+#random-button:hover{
+    animation: animate 8s linear infinite;
+}
+
+@keyframes animate{
+    0%{
+     background-position: 0%;
+    }
+    100%{
+     background-position: 400%;
+    }
+
+}
+
+#random-button:before{
+    content: '';
+    position: absolute;
+    z-index: -1;
+    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+    background-size: 400%;
+    opacity: 0;
+    transition: 0.5%;
+}
+
+#random-button:hover:before{
+    filter: blur(0px);
+    opacity: 1;
+    animation: animate 8s linear infinite;
+ 
 }
 
 
-/*LABEL (FOR SLIDER)*/
+/*BLACK BUTTON ANIMATIONS*/
+/*NEED TO ADD DELAY*/
+
+
+#black-button{
+    background: linear-gradient(45deg, rgba(71,71,71,1) 4%, rgba(0,0,0,1) 66%);
+    transition: background 0.5s linear;
+
+}
+
+#black-button:hover{
+    background: linear-gradient(45deg, rgba(0,0,0,1) 1%, rgba(102,102,102,1) 73%);
+    transition: 0.5s;
+
+}
+
+/*ERASE BUTTON*/
+#erase-single-button{
+    background: linear-gradient(45deg, rgba(184,184,184,1) 0%, rgb(172, 172, 172) 100%, rgb(163, 163, 163)100%);
+
+    color: black;
+    font-weight: medium;
+}
+
+
+#erase-single-button:hover{
+    background: linear-gradient(45deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 100%, rgba(196,196,196,1) 100%);
+
+
+    font-weight: bold;
+
+}
+
+
+
+
+/*ERASE ALL BUTTON*/
+#erase-all-button{
+    background-image: linear-gradient(to right, #000000 71%, #ffffff  100%, #000000  100%);
+    background-size: 800% auto;
+
+    color: white;            
+
+    box-shadow: 0 0 10px #eee;
+
+    border-radius: 15px;
+}
+
+
+#erase-all-button:hover{
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+
+    box-shadow: 0 0 20px rgb(255, 255, 255);
+
+    font-weight: bolder;
+    font-size: medium;
+}
+
+
+
+
+/*LABEL (FOR SLIDER CHANGE VALUE)*/
 label{
     color: white;
+    font-size: larger;
+    font-weight: bolder;
 }
 
 /*RANGE INPUT*/
@@ -127,34 +245,21 @@ label{
 
 
 
+
+
+
+
+
+
 /*CSS MEDIA QUERIES*/
 
-@media(min-width: 2122px){
-    #main-grid-container{
-        bottom: 20%;
-        height: 1250px;
-        width: 1250px;
-    }
 
-    #buttons-container{
-        top: -45%;
-    }
 
-}
 
-/*SCALING FOR 4K and 1440p, TAKE MIN-WIDTH INTO CONSIDERATION*/
-@media(min-width: 1153px) and (min-height: 900px){
-    #main-grid-container{
-        top: 12%;
-        /*height: 60vw;
-        width: 60vw;*/
-    }
 
-    #buttons-container{
-        bottom: 30%;
-    }
 
-}
+
+
 
 /*SCALING FOR 1080p, TAKE MIN-WIDTH INTO CONSIDERATION*/
 @media(min-width: 1153px) and (min-height: 700px){
@@ -172,6 +277,53 @@ label{
 
 }
 
+/*SCALING FOR 4K and 1440p, TAKE MIN-WIDTH INTO CONSIDERATION*/
+@media(min-width: 1153px) and (min-height: 900px){
+    #main-grid-container{
+        top: 8%;
+        /*height: 60vw;
+        width: 60vw;*/
+    }
+
+    #buttons-container{
+        bottom: 50%;
+    }
+
+}
+
+
+/*1440p Fix FOR MAIN-GRID-CONTAINER*/
+@media (min-width: 1153px) and (min-height: 1200px){
+    #main-grid-container{
+        top: 0%;
+    }
+}
+
+
+@media(min-width: 2122px) and (min-height: 1500px){
+    #main-grid-container{
+        top: 10%;
+        bottom: 30%;
+        height: 1250px;
+        width: 1250px;
+    }
+
+    #buttons-container{
+        top: -45%;
+    }
+
+}
+
+
+
+
+
+@media(min-width: 1153px) and (min-height: 1250px){
+    #buttons-container{
+        bottom: 30%;
+    }
+
+}
 
 
 @media(max-width: 1152px){
@@ -189,12 +341,11 @@ label{
     .button{
         margin: 1px 1px;
 
-        max-width: 20%;
-        max-height: 10%;
+        max-width: 70%;
+        max-height: 90%;
     }
 
 }
-
 
 
 
@@ -213,7 +364,7 @@ label{
     #buttons-container{
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        /*flex-wrap: wrap;*/
         align-items: center;
 
         padding-left: 20px;
